2009-11-17  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs:
	* BacktraceWrapper.cs:
	* EvaluationContext.cs:
	* MdbObjectValueAdaptor.cs: Use the new options object. Track
	  api changes.

2009-10-18  Michael Hutchinson  <mhutchinson@novell.com>

	* DebuggerServer.cs: Fix Pocess/Process spelling.

2009-10-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbAdaptorFactory.cs: Don't write compilation errors to the
	  standard output.

2009-10-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Avoid cast exception in GetMembers
	  when the object is of type TargetObjectObject. Fixes bug
	  #543805.

2009-10-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbAdaptor-2-4-2.cs: Add missing null check. Fixes bug
	  #544137 - Exception while run command.

2009-10-05  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Use long for thread and process id.

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Use the correct exception to
	  report target exceptions.

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* BacktraceWrapper.cs: Sort locals.

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Convert.cs:
	* MdbObjectValueAdaptor.cs: Improve support for nullable
	  types.

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Notify the started event before starting
	  the session. In this way, breakpoints will be inserted
	  before reaching main. Fixes bug #541727 - Debugger never
	  stops at the breakpoint.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* ArrayAdaptor.cs: CreateElementValue is not required anymore.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Don't show compiler generated
	  fields.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Implemented CreateValue. Fixed
	  resolution of nested types in GetType(name).

2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>
