@@ -1,3 +1,10 @@
+2009-11-18  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* DebuggerServer.cs:
+	* BacktraceWrapper.cs:
+	* EvaluationContext.cs:
+	* MdbObjectValueAdaptor.cs: Track api changes.
+
 2009-11-17  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* DebuggerServer.cs:
